k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: y-app-service
spec:
  selector:
    app: y-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
