k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: y-app
  annotations:
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /home
            pathType: Prefix
            backend:
              service:
                name: y-app-service
                port:
                  name: http

#  rules:
#    - host: cxp.k8s.azure.msgoat.eu
#      http:
#        paths:
#          - path: /cxp-team-heiterbiswolkig/mdo-cxp-demo(/|$)(.*)
#            pathType: Prefix
#            backend:
#              service:
#                name: mdo-cxp-demo-service
#                port:
#                  number: 8080
