k8s/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: y-app-netpol
  namespace: cxp-team-y
spec:
  podSelector: {}
  ingress:
    - {}
  policyTypes:
    - Ingress
